<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bckg_semua_budin">

    <LinearLayout
        android:id="@+id/ln1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="9dp">
        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.5"
            android:scaleY="0.9"
            android:background="@drawable/comp_back_button">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@id/ln2"
        android:layout_toEndOf="@id/ln1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/title_jenis_neuron">
        </ImageView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/ln2"
        android:layout_marginTop="9dp"
        android:paddingEnd="18dp"
        android:layout_marginStart="52dp">
        <Button
            android:id="@+id/home_button"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_home_button"
            android:scaleX="1">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln3"
        android:layout_below="@id/ln2"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="40dp"
        android:paddingBottom="20dp"
		android:orientation="vertical"
        android:layout_centerHorizontal="true"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/image_jenis_neuron">
        </ImageView>

		<LinearLayout
			android:id="@+id/ln_text1_4"
			android:layout_below="@id/ln_text1"
			android:layout_marginTop="0dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"

			android:layout_centerHorizontal="true">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginEnd="10dp"
				android:layout_marginStart="16dp"
				android:fontFamily="@font/segoeui"
				android:justificationMode="inter_word"
				android:text="@string/content_text_number_1"
				android:textColor="#FFFFFF"
				android:textSize="17sp">
			</TextView>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginEnd="0dp"
				android:layout_marginStart="0dp"
				android:fontFamily="@font/segoeui"
				android:justificationMode="inter_word"
				android:text="@string/jenisneuron1"
				android:textColor="#FFFFFF"
				android:textSize="17sp">
			</TextView>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/ln_text1_5"
			android:layout_marginTop="0dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"

			android:layout_centerHorizontal="true">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginEnd="10dp"
				android:layout_marginStart="16dp"
				android:fontFamily="@font/segoeui"
				android:justificationMode="inter_word"
				android:text="@string/content_text_number_2"
				android:textColor="#FFFFFF"
				android:textSize="17sp">
			</TextView>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginEnd="0dp"
				android:layout_marginStart="0dp"
				android:fontFamily="@font/segoeui"
				android:justificationMode="inter_word"
				android:text="@string/jenisneuron2"
				android:textColor="#FFFFFF"
				android:textSize="17sp">
			</TextView>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/ln_text1_2"
			android:layout_marginTop="0dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"

			android:layout_centerHorizontal="true">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginEnd="10dp"
				android:layout_marginStart="16dp"
				android:fontFamily="@font/segoeui"
				android:justificationMode="inter_word"
				android:text="@string/content_text_number_3"
				android:textColor="#FFFFFF"
				android:textSize="17sp">
			</TextView>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginEnd="0dp"
				android:layout_marginStart="0dp"
				android:fontFamily="@font/segoeui"
				android:justificationMode="inter_word"
				android:text="@string/jenisneuron3"
				android:textColor="#FFFFFF"
				android:textSize="17sp">
			</TextView>
		</LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ln4"
        android:layout_below="@id/ln3"
        android:layout_marginStart="322dp"
        android:layout_width="wrap_content"
        android:paddingBottom="20dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/forward_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_arrow_forward_white"
            android:scaleX="0.6">
        </Button>
    </LinearLayout>


</RelativeLayout>
