<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_indikator">

    <LinearLayout
        android:id="@+id/ln1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="9dp">
        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.5"
            android:scaleY="0.9"
            android:background="@drawable/comp_back_button">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln2"
        android:layout_toEndOf="@id/ln1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/title_indikator_keberhasilan">
        </ImageView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="100dp">
        <TextView
            android:id="@+id/nomor1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3.10.1"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="3dp">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:fontFamily="@font/segoeui"
            android:text="@string/content_indikator_keberhasilan1"
            android:textColor="#000000"
            android:textSize="18sp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay2"
        android:layout_marginTop="10dp"
        android:layout_below="@id/lay1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <TextView
            android:id="@+id/nomor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3.10.2"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="3dp">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:fontFamily="@font/segoeui"
            android:text="@string/content_indikator_keberhasilan2"
            android:textColor="#000000"
            android:textSize="18sp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay3"
        android:layout_marginTop="10dp"
        android:layout_below="@id/lay2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <TextView
            android:id="@+id/nomor3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3.10.3"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="3dp">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:fontFamily="@font/segoeui"
            android:text="@string/content_indikator_keberhasilan3"
            android:textColor="#000000"
            android:textSize="18sp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay4"
        android:layout_marginTop="10dp"
        android:layout_below="@id/lay3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <TextView
            android:id="@+id/nomor4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3.10.4"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="3dp">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:fontFamily="@font/segoeui"
            android:text="@string/content_indikator_keberhasilan4"
            android:textColor="#000000"
            android:textSize="18sp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay5"
        android:layout_marginTop="10dp"
        android:layout_below="@id/lay4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <TextView
            android:id="@+id/nomor5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3.10.5"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="3dp">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:fontFamily="@font/segoeui"
            android:text="@string/content_indikator_keberhasilan5"
            android:textColor="#000000"
            android:textSize="18sp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay6"
        android:layout_marginTop="10dp"
        android:layout_below="@id/lay5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <TextView
            android:id="@+id/nomor6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3.10.6"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="3dp">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:fontFamily="@font/segoeui"
            android:text="@string/content_indikator_keberhasilan6"
            android:textColor="#000000"
            android:textSize="18sp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay7"
        android:layout_marginTop="10dp"
        android:layout_below="@id/lay6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <TextView
            android:id="@+id/nomor7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4.10.1"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="3dp">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:fontFamily="@font/segoeui"
            android:text="@string/content_indikator_keberhasilan7"
            android:textColor="#000000"
            android:textSize="18sp">
        </TextView>
    </LinearLayout>


</RelativeLayout>