<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_teks">

    <LinearLayout
        android:id="@+id/ln1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.6"
            android:scaleY="0.8"
            android:background="@drawable/comp_back_button">

        </Button>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/title_kompetensi_inti">
        </ImageView>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="80dp">
        <TextView
            android:id="@+id/nomor1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="KI 1"
            android:textColor="#000000"
            android:textSize="18dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="3dp">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:fontFamily="@font/segoeui"
            android:text="@string/content_kompetensi_inti1"
            android:textColor="#000000"
            android:textSize="18dp">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lay2"
        android:layout_marginTop="10dp"
        android:layout_below="@id/lay1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <TextView
            android:id="@+id/nomor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="KI 2"
            android:textColor="#000000"
            android:textSize="18dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="3dp">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:fontFamily="@font/segoeui"
            android:text="@string/content_kompetensi_inti2"
            android:textColor="#000000"
            android:textSize="18dp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay3"
        android:layout_marginTop="10dp"
        android:layout_below="@id/lay2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <TextView
            android:id="@+id/nomor3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="KI 3"
            android:textColor="#000000"
            android:textSize="18dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="3dp">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:fontFamily="@font/segoeui"
            android:text="@string/content_kompetensi_inti3"
            android:textColor="#000000"
            android:textSize="18dp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay4"
        android:layout_marginTop="10dp"
        android:layout_below="@id/lay3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <TextView
            android:id="@+id/nomor4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="KI 4"
            android:textColor="#000000"
            android:textSize="18dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="3dp">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:fontFamily="@font/segoeui"
            android:text="@string/content_kompetensi_inti4"
            android:textColor="#000000"
            android:textSize="18dp">
        </TextView>
    </LinearLayout>


</RelativeLayout>